fix(BLW-29): add missing border-radius

--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -46,6 +46,7 @@
 			transition-delay: .15s;
 			transform-origin: 50% 50% 0;
 			opacity: 0;
+			border-radius: var(--border-radius-links);
 
 			&.active {
 				opacity: 1;
